# internal/application/request/user_request.go
@@ -1,8 +1,6 @@
 package request
 
 type RegisterUserRequest struct {
-	Username    string `json:"username" binding:"required,alphanum"`
-	Password    string `json:"password" binding:"required,min=6"`
-	Email       string `json:"email" binding:"required,email"`
-	PhoneNumber string `json:"phone_number" binding:"required,vn_phone"`
+	Password string `json:"password" binding:"required,min=6"`
+	Email    string `json:"email" binding:"required,email"`
 }
